package br.univille.entity;

public enum TipoAtividade {
    CACAPALAVRAS,
    MEMORIZAR_IMAGEM,
    ESCREVER_MEMORIA,
    COMPLETAR_PALAVRAS
}
