package br.univille.projfabsoftagenda.entity;

public enum EstadoEmocional {
    FELIZ,
    TRISTE,
    ANSIOSO,
    CALMO,
    NERVOSO,
    CONFUSO
}